docs/style_R.css
@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600&subset=greek');

body#bso {
  font-family: "Fira Sans", system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Arial Nova", Helvetica, Arial, sans-serif;
}

/*#bso .navbar {
  width: 100%;
  width: calc(100% - 40px);
}*/

#bso .navbar.bg-light {
  background-color: rgba(247, 249, 250, 0.9) !important;
  border-bottom: 1px solid hsl(0, 0%, 92%);
}
/*#bso .navbar-left, #bso .navbar-right {
  display: flex;
  position: relative;
}
#bso .navbar-links .dropdown-menu {
  margin-top: 9px;
  background: rgba(255, 255, 255, 0.9);
}
#bso .navbar-links .dropdown-item {
  padding-left: 1rem;
  padding-right: 1rem;
}
#bso .navbar-links > .nav-item {
  flex-basis: auto;
}*/
#bso .navbar-nav:last-of-type {
  margin-right: -0.5rem;
}

#bso #content {
  position: relative; /* Needed for scrollspy */
}

#bso #content > .row:first-child {
  padding-top: 56px;
}
#bso #content > .jumbotron:first-child {
  padding-top: 120px;
}

#bso .cover {
  height: calc(100vh - 60px);
  display: flex;
  align-items: center;
}

#bso .cover .col {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#bso .grad-blue-purple {
  background: linear-gradient(45deg, #33adff, #99008a);
  color: #FFF;
}
#bso .grad-blue-purple .btn-outline-primary {
  color: #FFF;
  border-color: #FFF;
}
#bso .grad-blue-purple .btn-outline-primary:hover {
  color: #222;
  background: #FFF;
}

#bso .col.login {
  width: 300px;
  flex: 0 1 auto;
}

#bso .login input:first-of-type {
  margin-top: 20px;
}
#bso .login input:last-of-type {
  margin-bottom: 20px;
}

#bso .vis-category.container {
  padding: 40px;
}

/* Sidebar styles
-------------------------------------------------- */
.sidebar {
  padding: 0;
  position: fixed;
  height: 100%;
  top: 56px;
  overflow-x: hidden;
  overflow-y: auto;
  background: hsl(0, 0%, 98%);
  border-right: 1px solid hsl(0, 0%, 92%);
}
.sidebar form {
  padding: 10px;
  border-bottom: 1px solid hsl(0,0%,92%);
  margin-bottom: 10px;
}
.sidebar .nav-link {
  border-radius: 0;
}
.sidebar .nav-link:not(.active) {
  color: #222;
}
.sidebar .nav-link:not(.active):hover {
  color: #222;
  background: #c1d3e6;
}



/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body#bso {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}
#bso .footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

